# dci-module-ppn-discovery-peer

./: CMakeLists.txt
idl/ppn/discovery/: peer.idl
src/: entry.cpp  pch.hpp  peer.cpp  peer.hpp
src/peer/: io.cpp  io.hpp
